--- a/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
@@ -4,6 +4,7 @@
             {{>cineDialog}}
             {{>layoutChooser}}
             {{>annotationDialogs}}
+            {{>stackSyncDialog}}
         </div>
         <div id="viewer">
             {{>toolbarSection (clone this state=state)}}
