Freehand3D largely working, just need to work on menus.

--- a/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
@@ -5,6 +5,7 @@
             {{>layoutChooser}}
             {{>annotationDialogs}}
             {{>stackSyncDialog}}
+            {{>ioDialogs}}
         </div>
         <div id="viewer">
             {{>toolbarSection (clone this state=state)}}
