ROI Management working, toggle stats + interactivity working.

--- a/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
@@ -6,6 +6,7 @@
             {{>annotationDialogs}}
             {{>stackSyncDialog}}
             {{>ioDialogs}}
+            {{>volumeManagementDialogs}}
         </div>
         <div id="viewer">
             {{>toolbarSection (clone this state=state)}}
