--- a/Packages/ohif-viewerbase/client/components/viewer/viewportOverlay/viewportOverlay.html
+++ b/Packages/ohif-viewerbase/client/components/viewer/viewportOverlay/viewportOverlay.html
@@ -10,6 +10,7 @@
                 <div>{{studyDescription}}</div>
                 <div>{{formatDA studyDate}} {{formatTM studyTime}}</div>
                 <div>Sync {{> syncCheckbox}}</div>
+                 <div>Smooth {{> smoothCheckbox}}</div>
             </div>
             <div class="bottomright dicomTag">
                 <div>{{#if zoom}}Zoom: {{formatNumberPrecision zoom 0}}%{{/if}}</div>
