export working localally (i.e. up to AIM doc generation).

--- a/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
@@ -7,6 +7,8 @@
             {{>stackSyncDialog}}
             {{>ioDialogs}}
             {{>volumeManagementDialogs}}
+            {{>roiCollectionBuilderDialogs}}
+            {{>helpDialogs}}
         </div>
         <div id="viewer">
             {{>toolbarSection (clone this state=state)}}
