import working locally up to the point of rest call.

--- a/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/freehandHelpMenu/divs/freehandHelpDraw.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/freehandHelpMenu/divs/freehandHelpDraw.html
@@ -1,17 +1,17 @@
 <template name="freehandHelpDraw">
   <div>
     <p>The ROI Draw tool is used to create and edit contours of an ROI.</p>
-    <h5>Polygon mode</h5>
+    <h5>Draw Polygons</h5>
     <ul>
       <li>Click to draw a node.</li>
       <li>Keep clicking to draw the contour point by point.</li>
       <li>Complete the contour by clicking on the origin node without crossing any lines.</li>
     </ul>
-    <h5>Pencil Mode</h5>
+    <h5>Draw Freehand</h5>
     <ul>
-      <li>Shift-click to start drawing.</li>
-      <li>Move the mouse to draw the contour.</li>
-      <li>Complete the contour by clicking on the origin node without crossing any lines.</li>
+      <li>Hold the mouse to start drawing.</li>
+      <li>Drag the mouse to draw the contour.</li>
+      <li>Complete the contour by releasing the mouse at the origin node without crossing any lines.</li>
     </ul>
     <h5>Edit</h5>
     <ul>
