--- a/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/freehandHelpMenu/divs/freehandHelpVolumes.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/freehandHelpMenu/divs/freehandHelpVolumes.html
@@ -19,7 +19,7 @@
     <ul>
       <li>Clicking ‘N’ will create a new volume and activate it.</li>
       <li>
-        Alt-click (option-click or cmd-click on mac) a contour to select it as
+        Alt-click (cmd-click on mac) a contour to select it as
         the active ROI for drawing.
       </li>
       <li>Double-click a contour to change the name of an ROI.</li>
