--- a/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
@@ -8,6 +8,7 @@
             {{>ioDialogs}}
             {{>volumeManagementDialogs}}
             {{>roiCollectionBuilderDialogs}}
+            {{>roiImportListDialogs}}
             {{>helpDialogs}}
         </div>
         <div id="viewer">
