--- a/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/freehandHelpMenu/divs/freehandHelpSculpt.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/freehandHelpMenu/divs/freehandHelpSculpt.html
@@ -3,15 +3,15 @@
     <p>This tool is used to sculpt contours drawn with the freehand tool.</p>
     <h5>Select ROI</h5>
     <ul>
-      <li>Ctrl-click near a contour to select it for editing.</li>
+      <li>Double click near a contour to select it for editing.</li>
       <li>The region will become highlighted to show that it has been selected.</li>
     </ul>
     <h5>Edit ROI</h5>
     <ul>
-      <li>$Hold down left click near the selected tool to begin editing.</li>
+      <li>Hold down left click near the selected tool to begin editing.</li>
       <ul>
-        <li>$The closer to the contour the mouse is, the smaller the tool will be.</li>
-        <li>$The tool can push from both inside and outside the contour.</li>
+        <li>The closer to the contour the mouse is, the smaller the tool will be.</li>
+        <li>The tool can push from both inside and outside the contour.</li>
       </ul>
       <li>With the mouse held down, drag the tool to push the ROI.</li>
       <ul>
