--- a/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/freehandHelpMenu/divs/freehandHelpToggleStats.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/freehandHelpMenu/divs/freehandHelpToggleStats.html
@@ -6,13 +6,13 @@
     </p>
     <p>Enabled</p>
     <ul>
-      <li>The stats for each ROI will be displayed on the screen.</li>
-      <li>The stats windows can be moved by dragging them with the mouse.</li>
-      <li>The stats windows will be present in exported snapshots.</li>
+      <li>The statistics for each ROI will be displayed on the screen.</li>
+      <li>Statistic windows can be moved by dragging them with the mouse.</li>
+      <li>Statistic windows will be present in exported snapshots.</li>
     </ul>
     <p>Disabled</p>
     <ul>
-      <li>The stats can still be viewed by hovering over an ROI.</li>
+      <li>The statistics can be viewed by hovering over an ROI's node.</li>
       <li>
         If the stats window has been moved, the stats window will
         display at that location.
