--- a/StandaloneViewer/StandaloneViewer/client/components/standaloneViewer/standaloneViewer.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/standaloneViewer/standaloneViewer.html
@@ -1,17 +1,19 @@
 <template name="standaloneViewer">
     {{#header}}
         {{#section 'brand'}}
-            <svg class="logo-image">
-                <use xlink:href={{absoluteUrl "packages/ohif_viewerbase/assets/icons.svg#icon-ohif-logo"}}></use>
-            </svg>
-            <div class="logo-text">Open Health Imaging Foundation</div>
+        <svg class="logo-image">
+            <use xlink:href={{absoluteUrl "packages/icr_xnat-roi/assets/icons.svg#icon-xnat-ohif-logo"}}></use>
+        </svg>
+        <div class="logo-text">OHIF Viewer XNAT RoI plugin - v1.7 - cornerstoneTools v3 ALPHA</div>
         {{/section}}
+        <!--- TODO: Maybe this will become more integrated with the ROI management, but not sure at this stage.
         {{#section 'headerMenu'}}
             <span class="header-options pull-left m-r-1">Options</span>
             <div class="menu-toggle pull-right">
                 <span class="caret-down"></span>
             </div>
         {{/section}}
+        -->
     {{/header}}
     {{>viewer}}
 </template>
