--- a/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/helpDialogs.html
+++ b/Packages/icr-xnat-roi/client/components/viewer/helpDialogs/helpDialogs.html
@@ -10,6 +10,9 @@
                 <use xlink:href={{absoluteUrl "packages/icr_xnat-roi/assets/icons.svg#icon-freehand-menu"}}></use>
               </svg>
           </a>
+          <a class="helpButton js-help-brush btn btn-sm btn-primary">
+              <i id="fontAwesomeIcon" class="{{pressed 'Brush'}} fa fa-paint-brush fa-2x"></i>
+          </a>
           <a class="helpButton js-help-file btn btn-sm btn-primary">
               <svg class={{pressed 'File'}}>
                 <use xlink:href={{absoluteUrl "packages/icr_xnat-roi/assets/icons.svg#icon-xnat-logo"}}></use>
@@ -31,6 +34,8 @@
       <div class="helpBody">
         {{#if showHelp 'ROI'}}
           {{>freehandHelpMenu}}
+        {{else if showHelp 'Brush'}}
+          {{>brushHelpMenu}}
         {{else if showHelp 'File'}}
           {{>ioHelpMenu}}
         {{/if}}
