Fixed 'n' appearing in textbox on hotkeyed new volume.

--- a/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
@@ -10,6 +10,7 @@
             {{>roiCollectionBuilderDialogs}}
             {{>roiImportListDialogs}}
             {{>helpDialogs}}
+            {{>freehandSetNameDialogs}}
         </div>
         <div id="viewer">
             {{>toolbarSection (clone this state=state)}}
