Working on UI for the brush stuff.

--- a/Packages/icr-peppermint-tools/client/components/viewer/freehandSetNameDialogs/freehandSetNameDialogs.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/freehandSetNameDialogs/freehandSetNameDialogs.html
@@ -16,6 +16,7 @@
                  type="text"
                  tabindex="-1"
                  autocomplete="off"
+                 placeholder="Enter name.."
                  onfocus="this.select()"/>
       </div>
       <div>
