--- a/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
@@ -11,6 +11,7 @@
             {{>roiImportListDialogs}}
             {{>helpDialogs}}
             {{>freehandSetNameDialogs}}
+            {{>brushMetadataDialogs}}
         </div>
         <div id="viewer">
             {{>toolbarSection (clone this state=state)}}
