--- a/Packages/icr-peppermint-tools/client/components/viewer/brushMetadataDialogs/brushMetadataDialogs.styl
+++ b/Packages/icr-peppermint-tools/client/components/viewer/brushMetadataDialogs/brushMetadataDialogs.styl
@@ -22,7 +22,7 @@
   .brushMetadataHeader
     display: -webkit-flex
     display: -ms-flexbox
-    display: flex;
+    display: flex
     flex-wrap: nowrap
     justify-content: space-between
 
@@ -46,13 +46,14 @@
     display: -ms-flexbox
     display: flex
     flex-wrap: nowrap
-    align-content: space-between
-    align-items: flex-end
+    justify-content: space-between
+    align-items: baseline
 
   .brush-metadata-vert-box
     display: -webkit-flex
     display: -ms-flexbox
-    display: flex;
-
+    display: flex
     flex-direction: column
-    align-items: space-between
+
+  .choose-segmentation-type-header
+    margin-top: 20px
