--- a/Packages/icr-peppermint-tools/client/components/viewer/brushMetadataDialogs/brushMetadataDialogs.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/brushMetadataDialogs/brushMetadataDialogs.html
@@ -40,6 +40,11 @@
         <div>
           {{>brushMetadataSearchList searchResults=searchResults}}
         </div>
+        {{#if modifiers}}
+          HAS MODIFIERS!
+          TODO -> Add a select here with the ID "brush-metadata-modifier-select"
+          Use { { modifiers } } to generate the options, make the first one default.
+        {{/if}}
       </div>
 
 
