Working segmentation management dialog.

--- a/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
+++ b/StandaloneViewer/StandaloneViewer/client/components/viewer/viewer.html
@@ -12,6 +12,7 @@
             {{>helpDialogs}}
             {{>freehandSetNameDialogs}}
             {{>brushMetadataDialogs}}
+            {{>segManagementDialogs}}
         </div>
         <div id="viewer">
             {{>toolbarSection (clone this state=state)}}
