Added a paint selector in the seg management dialogs.

--- a/Packages/icr-peppermint-tools/client/components/viewer/segManagementDialogs/segManagementList/segManagementList.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/segManagementDialogs/segManagementList/segManagementList.html
@@ -6,6 +6,7 @@
         <th>Label</th>
         <th>Category</th>
         <th>Type</th>
+        <th>Paint</th>
         <th>Edit</th>
       </tr>
 
