--- a/Packages/icr-peppermint-tools/client/components/viewer/segManagementDialogs/segManagementListItem/segManagementListItem.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/segManagementDialogs/segManagementListItem/segManagementListItem.html
@@ -3,7 +3,10 @@
     <td><i class="fa fa-square" style="color:{{color}}"></i> {{label}}</td>
     <td>{{category}}</td>
     <td>{{typeWithModifier}}</td>
-    <td>
+    <td class='centeredCell'>
+      <input type="radio" class="js-switch-seg" {{checked}} name="sync" value="">
+    </td>
+    <td class='centeredCell'>
       <a class="js-seg-edit btn btn-sm btn-secondary">
         <i class="fa fa fa-wrench"></i>
       </a>
