--- a/Packages/icr-peppermint-tools/client/components/viewer/segManagementDialogs/segManagementDialogs.styl
+++ b/Packages/icr-peppermint-tools/client/components/viewer/segManagementDialogs/segManagementDialogs.styl
@@ -7,7 +7,6 @@
   z-index: 1000
 
   max-height: calc(100% - 50px)
-  min-width: 260px
   max-width: calc(100% - 100px)
   position: absolute
   margin: auto
@@ -69,3 +68,6 @@
     padding: 0px 5px
     float: center
     white-space: nowrap
+
+  .centeredCell
+    text-align: center
