Seg manager working well.

--- a/Packages/icr-peppermint-tools/client/components/viewer/segManagementDialogs/segManagementDialogs.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/segManagementDialogs/segManagementDialogs.html
@@ -14,5 +14,13 @@
         {{>segManagementList segmentations=segmentations}}
       </div>
 
+      <div class="segManagementFooter">
+        <hr/>
+        <a class="segManagementNewButton js-seg-management-new btn btn-sm btn-primary">
+          <i class="fa fa-plus-circle"></i> Segmentation
+        </a>
+        <br/>
+      </div>
+
   </dialog>
 </template>
