--- a/Packages/icr-peppermint-tools/client/components/viewer/segManagementDialogs/segManagementList/segManagementList.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/segManagementDialogs/segManagementList/segManagementList.html
@@ -1,6 +1,6 @@
 <template name="segManagementList">
-  <div class="segManagementList">
-    <table class="segManagementListBody">
+  <div class="seg-management-list">
+    <table class="peppermint-table">
 
       <tr>
         <th>Label</th>
