--- a/Packages/icr-peppermint-tools/client/components/viewer/volumeManagementDialogs/roiCollectionList/roiCollectionList.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/volumeManagementDialogs/roiCollectionList/roiCollectionList.html
@@ -1,6 +1,6 @@
 <template name="roiCollectionList">
-  <div class="roiCollectionListBody">
-    <table>
+  <div class="roi-collection-list-body">
+    <table class="peppermint-table">
       {{#each roiCollection in roiCollections}}
           {{>volumeList roiCollection}}
       {{/each}}
