--- a/Packages/icr-peppermint-tools/client/components/viewer/segManagementDialogs/segManagementDialogs.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/segManagementDialogs/segManagementDialogs.html
@@ -1,22 +1,20 @@
 <template name="segManagementDialogs">
   <dialog id="segManagementDialog"
-      class="segManagementDialog noselect"
+      class="seg-management-dialog noselect"
       oncontextmenu="return false">
-      <div class="segManagementHeader">
+      <div class="seg-management-header">
         <h3>Segmentations</h3>
-        <a class="segManagementCancel js-seg-management-cancel btn btn-sm btn-secondary">
+        <a class="seg-management-cancel js-seg-management-cancel btn btn-sm btn-secondary">
           <i class="fa fa-times-circle fa-2x"></i>
         </a>
       </div>
       <hr/>
 
-      <div class="segManagementList">
-        {{>segManagementList segmentations=segmentations}}
-      </div>
+      {{>segManagementList segmentations=segmentations}}
 
-      <div class="segManagementFooter">
+      <div>
         <hr/>
-        <a class="segManagementNewButton js-seg-management-new btn btn-sm btn-primary">
+        <a class="seg-management-new-button js-seg-management-new btn btn-sm btn-primary">
           <i class="fa fa-plus-circle"></i> Segmentation
         </a>
         <br/>
