--- a/Packages/icr-peppermint-tools/client/components/viewer/volumeManagementDialogs/volumeListItem/volumeListItem.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/volumeManagementDialogs/volumeListItem/volumeListItem.html
@@ -2,10 +2,10 @@
   <tr>
     <th><!--Blank Cell to allow indent with strong alignment--></th>
     <th><i class="fa fa-square" style="color:{{color}}"></i> {{volumeName}}</th>
-    <th class="centeredCell">{{numPolygons}}</th>
+    <th class="centered-cell">{{numPolygons}}</th>
     {{#if isDefault}}
-      <th class="centeredCell ">
-        <input type="radio" class="volumeListItemCheck js-switch-button"  {{checked}} name="sync" value="">
+      <th class="centered-cell ">
+        <input type="radio" class="js-switch-button" {{checked}} name="sync" value="">
       </th>
     {{/if}}
   </tr>
