--- a/Packages/icr-peppermint-tools/client/components/viewer/volumeManagementDialogs/volumeManagementDialogs.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/volumeManagementDialogs/volumeManagementDialogs.html
@@ -1,23 +1,20 @@
 <template name="volumeManagementDialogs">
   <dialog id="volumeManagementDialog"
-      class="volumeManagementDialog noselect"
+      class="volume-management-dialog noselect"
       oncontextmenu="return false">
-      <div class="volumeManagementHeader">
+      <div class="volume-management-header">
         <h3>Regions of Interest</h3>
-        <a class="volumeManagementCancel js-volume-management-cancel btn btn-sm btn-secondary">
+        <a class="volume-management-cancel js-volume-management-cancel btn btn-sm btn-secondary">
           <i class="fa fa-times-circle fa-2x"></i>
         </a>
       </div>
 
       {{>roiCollectionList roiCollections=roiCollections}}
 
-      <div class="volumeManagementFooter">
-        <hr/>
-        <a class="volumeManagementNewButton js-volume-management-new btn btn-sm btn-primary">
-          <i class="fa fa-plus-circle"></i> ROI
-        </a>
-        <br/>
-      </div>
+      <hr/>
+      <a class="volume-management-new-button js-volume-management-new btn btn-sm btn-primary">
+        <i class="fa fa-plus-circle"></i> ROI
+      </a>
 
   </dialog>
 </template>
