--- a/Packages/icr-peppermint-tools/client/components/viewer/freehandSetNameDialogs/freehandSetNameDialogs.styl
+++ b/Packages/icr-peppermint-tools/client/components/viewer/freehandSetNameDialogs/freehandSetNameDialogs.styl
@@ -1,6 +1,6 @@
 @import "{ohif:design}/app"
 
-.freehand-text-input-dialog
+.freehand-set-name
   theme('border', '1px solid $uiBorderColor', 0.95)
   theme('background', '$uiGrayDarkest', 0.95)
   theme('color', '$textSecondaryColor')
@@ -24,14 +24,15 @@
     flex-direction: row
     align-items: baseline
     justify-context: space-around
+    width: 100%
 
   h3
     font-weight: 400
 
-  .freehand-text-input
+  .freehand-set-name-input
     width: 100%
 
-  .freehand-dialog-confirm
+  .freehand-set-name-confirm
     margin-top: 10px
     float: center
     width: 100%
