--- a/Packages/icr-peppermint-tools/client/components/viewer/brushMetadataDialogs/brushMetadataModifiers/brushMetadataModifiers.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/brushMetadataDialogs/brushMetadataModifiers/brushMetadataModifiers.html
@@ -1,6 +1,6 @@
 <template name="brushMetadataModifiers">
-    <label for="brushMetadataModifiers">Modifier</label>
-    <select id="brush-metadata-modifier-select" class="brushMetadataModifiers">
+    <label for="brush-metadata-modifiers">Modifier</label>
+    <select id="brush-metadata-modifier-select" class="brush-metadata-modifiers">
       {{#each modifier in modifiers}}
         <option value="{{modifier.CodeMeaning}}">{{modifier.CodeMeaning}}</option>
       {{/each}}
