--- a/Packages/icr-peppermint-tools/client/components/viewer/brushMetadataDialogs/brushMetadataSearchList/brushMetadataSearchList.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/brushMetadataDialogs/brushMetadataSearchList/brushMetadataSearchList.html
@@ -1,5 +1,5 @@
 <template name="brushMetadataSearchList">
-  <div class="brushMetadataSearchList">
+  <div class="brush-metadata-search-list">
     <table>
       {{#each searchResult in searchResults}}
         {{>brushMetadataSearchListItem searchResult}}
