--- a/Packages/icr-peppermint-tools/client/components/viewer/freehandSetNameDialogs/freehandSetNameDialogs.html
+++ b/Packages/icr-peppermint-tools/client/components/viewer/freehandSetNameDialogs/freehandSetNameDialogs.html
@@ -9,17 +9,17 @@
           <i class="fa fa-times-circle fa-2x"></i>
         </a>
       </div>
-      <input name="freehandTextInput"
-             class="freehand-set-name-input"
-             type="text"
-             tabindex="-1"
-             autocomplete="off"
-             placeholder="Enter name.."
-             onfocus="this.select()"/>
-      <div>
-          <a class="freehand-set-name-confirm btn btn-sm btn-primary">
-            <i class="fa fa fa-check-circle fa-2x"></i>
-          </a>
+      <div class="freehand-set-name-horizontal-box">
+        <input name="freehandTextInput"
+               class="freehand-set-name-input"
+               type="text"
+               tabindex="-1"
+               autocomplete="off"
+               placeholder="Enter name.."
+               onfocus="this.select()"/>
+        <a class="freehand-set-name-confirm btn btn-sm btn-primary">
+          <i class="fa fa fa-check-circle fa-2x"></i>
+        </a>
       </div>
   </dialog>
 
