--- a/Packages/icr-peppermint-tools/client/components/viewer/freehandSetNameDialogs/freehandSetNameDialogs.styl
+++ b/Packages/icr-peppermint-tools/client/components/viewer/freehandSetNameDialogs/freehandSetNameDialogs.styl
@@ -22,17 +22,7 @@
     display: -ms-flexbox
     display: flex
     flex-direction: row
-    align-items: baseline
-    justify-context: space-around
-    width: 100%
+    justify-content: space-between
 
   h3
     font-weight: 400
-
-  .freehand-set-name-input
-    width: 100%
-
-  .freehand-set-name-confirm
-    margin-top: 10px
-    float: center
-    width: 100%
