--- a/Packages/icr-peppermint-tools/client/components/viewer/brushMetadataDialogs/brushMetadataDialogs.styl
+++ b/Packages/icr-peppermint-tools/client/components/viewer/brushMetadataDialogs/brushMetadataDialogs.styl
@@ -1,6 +1,6 @@
 @import "{ohif:design}/app"
 
-.brushMetadataDialog
+.brush-metadata-dialog
   theme('border', '1px solid $uiBorderColor', 0.95)
   theme('background', '$uiGrayDarkest', 0.95)
   theme('color', '$textSecondaryColor')
@@ -12,19 +12,11 @@
   position: absolute
   margin: auto
 
-
   padding-right: 10px
   padding-left: 10px
   padding-bottom: 10px
   border-radius: 8px
   text-align: center
-
-  .brushMetadataHeader
-    display: -webkit-flex
-    display: -ms-flexbox
-    display: flex
-    flex-wrap: nowrap
-    justify-content: space-between
 
   h3
     font-weight: 400
@@ -32,15 +24,10 @@
     border-radius: 8px
     padding: 2px
 
-  .brushMetadataCancel
-    text-align: right
-    margin-top: 16px
-
-  .brushMetadataNewButton
-    float: center
+  .brush-metadata-input
     width: 100%
 
-  .brushMetadataTableButton
+  .brush-metadata-new-button
     width: 100%
 
   .brush-metadata-vert-box
@@ -60,14 +47,7 @@
     display: flex
     flex-direction: row
     align-items: baseline
-    justify-context: space-between
-
-  .brushMetadataSearchList
-    text-align: left
-    max-height: calc(50vh - 300px);
-    padding-right: 18px
-    overflow-y: auto
-    overflow-x: hidden
+    justify-content: space-between
 
   .brush-metadata-validity-indicator
     margin-left: 10px
